[project]
name = "conclave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.2",
    "matplotlib>=3.9.4",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
